# lightjs

./: .gitignore  AGENTS.md  ARM64_CROSS_COMPILE.md  CLAUDE.md  CMakeLists.txt  ERROR_FORMATTING_INTEGRATION.md  FINAL_SUMMARY.md  INTEGRATION.md  LICENSE  PROGRESS.md  README.md  REPL_USAGE.md  SESSION3_SUMMARY.md  STRING_INTERNING_INTEGRATION.md  TASKS.md  TODO.md  WASM_ENHANCEMENTS.md  WASM_STATUS.md  a.out  test_push.js
benchmarks/: array_bench.js  bench_runner.cc  crypto_bench.js  richards.js
cmake/: LightJSConfig.cmake.in  TinyJSConfig.cmake.in  lightjs.pc.in  tinyjs.pc.in
examples/: async_demo.js  async_test.cc  async_test.js  debug_test.cc  fetch_demo.js  gc_test.cc  json_object_test.cc  methods_test.cc  run_async_demo.cc  simple_async.js  test.cc  test_modules.cc
examples/integration/: CMakeLists.txt  README.md  simple_app.cc
examples/modules/: main.js  math.js  simple_math.js  simple_test.js  utils.js
include/: array_methods.h  ast.h  bigint.h  bigint_impl.h  checked_arithmetic.h  compat.h  crypto.h  date_object.h  environment.h  error_formatter.h  event_loop.h  fs.h  fs_compat.h  gc.h  http.h  interpreter.h  json.h  lexer.h  lightjs.h  math_object.h  module.h  object_methods.h  object_shape.h  ordered_map.h  parser.h  regex_additional_binary_matchers.inc  regex_additional_binary_properties.inc  regex_additional_script_matchers.inc  regex_additional_script_properties.inc  regex_match_utils.h  regex_utils.h  simd.h  simple_regex.h  streams.h  string_methods.h  string_table.h  symbols.h  text_encoding.h  tinyjs.h  tls.h  (+6 more)
include/wasm/: wasm_decoder.h  wasm_runtime.h  wasm_types.h
scripts/: download_test262.sh
src/: array_methods.cc  bigint_impl.cc  crypto.cc  date_object.cc  date_object_format.cc  date_object_getters.cc  date_object_internal.h  date_object_setters.cc  environment.cc  error_formatter.cc  event_loop.cc  fs.cc  fs_compat.cc  gc.cc  gc_value.cc  http.cc  interpreter.cc  json.cc  json_helpers.cc  json_internal.h  json_parse.cc  json_stringify.cc  lexer.cc  lexer_internal.h  lexer_literals.cc  lexer_regex.cc  lexer_tokenize.cc  math_object.cc  module.cc  module_async.cc  module_exports.cc  module_internal.h  module_loader.cc  object_shape.cc  parser.cc  parser_declarations.cc  parser_expression_class.cc  parser_expression_core.cc  parser_expression_functions.cc  parser_expression_literals.cc  (+32 more)
src/wasm/: wasm_decoder.cc  wasm_interpreter.cc  wasm_memory.cc
test262/: README.md  test262_harness.cc  test262_harness.h  test262_runner.cc
test262_sample/test/language/: async-function.js  await-expression.js  negative-test.js  sample-test.js  simple.js
tests/: callback_test.cc  class_test.cc  debug_flow_test.cc  debug_test.cc  debug_test2.cc  error_formatting_test.cc  error_test.cc  event_loop_test.cc  gc_test.cc  generator_forof_test.cc  generator_multi_yield_test.cc  generator_simple_test.cc  generator_test.cc  global_accessor_update_test.cc  json_object_test.cc  memory_limit_test.cc  methods_test.cc  simple_error_test.cc  simple_object_test.cc  stack_trace_test.cc  string_interning_test.cc  test.cc  test_all_new_features.js  test_array_length.js  test_forin_debug.js  test_forin_simple.js  test_func_no_rest.js  test_minimal_spread.js  test_new_features.js  test_no_spread.js  test_obj_direct.js  test_object.js  test_object_debug.js  test_object_keys.js  test_rest_only.js  test_rest_simple.js  test_runner.cc  test_session2_features.js  test_simple_obj.js  test_spread_rest.js  (+3 more)
