cmake_minimum_required(VERSION 3.20)
project(TinyJSIntegrationExample CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Method 1: Use find_package (if TinyJS is installed)
find_package(TinyJS QUIET)

if(TinyJS_FOUND)
  message(STATUS "Found installed TinyJS: ${TinyJS_VERSION}")
  add_executable(simple_app simple_app.cc)
  target_link_libraries(simple_app PRIVATE TinyJS::tinyjs)
else()
  message(STATUS "TinyJS not found via find_package, trying pkg-config...")

  # Method 2: Use pkg-config (fallback)
  find_package(PkgConfig)
  if(PkgConfig_FOUND)
    pkg_check_modules(TinyJS QUIET tinyjs)

    if(TinyJS_FOUND)
      message(STATUS "Found TinyJS via pkg-config: ${TinyJS_VERSION}")
      add_executable(simple_app simple_app.cc)
      target_include_directories(simple_app PRIVATE ${TinyJS_INCLUDE_DIRS})
      target_link_libraries(simple_app PRIVATE ${TinyJS_LIBRARIES})
      target_link_directories(simple_app PRIVATE ${TinyJS_LIBRARY_DIRS})
    else()
      message(STATUS "TinyJS not found via pkg-config")

      # Method 3: Build from source in parent directory
      if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeLists.txt")
        message(STATUS "Using TinyJS from source tree")
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../.. tinyjs_build)
        add_executable(simple_app simple_app.cc)
        target_link_libraries(simple_app PRIVATE TinyJS::tinyjs)
      else()
        message(FATAL_ERROR "TinyJS not found. Please install TinyJS or build from source.")
      endif()
    endif()
  else()
    message(FATAL_ERROR "PkgConfig not found and TinyJS not installed")
  endif()
endif()
