cmake_minimum_required(VERSION 3.20)
project(LightJSIntegrationExample CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Method 1: Use find_package (if LightJS is installed)
find_package(LightJS QUIET)

if(LightJS_FOUND)
  message(STATUS "Found installed LightJS: ${LightJS_VERSION}")
  add_executable(simple_app simple_app.cc)
  target_link_libraries(simple_app PRIVATE LightJS::lightjs)
else()
  message(STATUS "LightJS not found via find_package, trying pkg-config...")

  # Method 2: Use pkg-config (fallback)
  find_package(PkgConfig)
  if(PkgConfig_FOUND)
    pkg_check_modules(LightJS QUIET lightjs)

    if(LightJS_FOUND)
      message(STATUS "Found LightJS via pkg-config: ${LightJS_VERSION}")
      add_executable(simple_app simple_app.cc)
      target_include_directories(simple_app PRIVATE ${LightJS_INCLUDE_DIRS})
      target_link_libraries(simple_app PRIVATE ${LightJS_LIBRARIES})
      target_link_directories(simple_app PRIVATE ${LightJS_LIBRARY_DIRS})
    else()
      message(STATUS "LightJS not found via pkg-config")

      # Method 3: Build from source in parent directory
      if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeLists.txt")
        message(STATUS "Using LightJS from source tree")
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../.. lightjs_build)
        add_executable(simple_app simple_app.cc)
        target_link_libraries(simple_app PRIVATE LightJS::lightjs)
      else()
        message(FATAL_ERROR "LightJS not found. Please install LightJS or build from source.")
      endif()
    endif()
  else()
    message(FATAL_ERROR "PkgConfig not found and LightJS not installed")
  endif()
endif()
